--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <title>Title</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, Chat!</h1>
+    <div id="chat"></div>
+    <input id="message" type="text" />
+    <script>
+      const socket = new WebSocket("ws://localhost:8000");
+      const chat = document.getElementById("chat");
+      const input = document.getElementById("message");
+      input.focus();
+      input.addEventListener("keydown", (event) => {
+       if (event.key === "Enter") {
+         const message = input.value;
+         input.value = "";
+         addMessage(message);
+         socket.send(message);
+       }
+      })
+      socket.addEventListener("open", () => {
+        addMessage("Welcome to chat!");
+      });
+      socket.addEventListener("message", ({ data }) => {
+        addMessage(data);
+      });
+      socket.addEventListener("close", () => {
+        addMessage("Closed, see you later...");
+      });
+      function addMessage(message) {
+        const div = document.createElement("div");
+        div.innerHTML = message;
+        chat.appendChild(div);
+      }
+    </script>
   </body>
 </html>
